lib/heist/scheme.tt
module Heist
  grammar Scheme
    rule program
      (comment / cell)* <Program>
    end
    
    rule comment
      space ";" (![\n\r] .)* space <Comment>
    end
    
    rule cell
      space (list / atom) space <Cell>
    end
    
    rule list
      "(" cell* ")" <List>
    end
    
    rule atom
      (datum / identifier) <Atom>
    end
    
    rule datum
      boolean / number / string
    end
    
    rule boolean
      ("#t" / "#f") <Boolean>
    end
    
    rule number
      complex / real / rational / integer
    end
    
    rule complex
      real "+" real "i" <Complex>
    end
    
    rule real
      integer ("." digit+) <Real>
    end
    
    rule rational
      numerator:integer "/" denominator:integer <Rational>
    end
    
    rule integer
      "-"? ("0" / [1-9] digit*) <Integer>
    end
    
    rule string
      '"' ('\\"' / [^"])* '"' <String>
    end
    
    rule identifier
      [^\(\)\s]+ <Identifier>
    end
    
    rule digit
      [0-9]
    end
    
    rule space
      [\s\n\r\t]*
    end
  end
end
